@@ -7,21 +7,23 @@ namespace NewsWaffle
 		public static string ImageProxy { get; set; } = "";
         public static string LinkProxy { get; set; } = "";
 
-        public static string GetImageUrl(string url)
+        public static string GetImageUrl(Uri url)
             => ProxyLink(ImageProxy, url);
 
-        public static string GetImageUrl(Uri url)
-            => GetImageUrl(url.AbsoluteUri);
-
-        public static string GetLinkUrl(string url)
-            => ProxyLink(LinkProxy, url);
-
         public static string GetLinkUrl(Uri url)
-            => GetLinkUrl(url.AbsoluteUri);
+            => ProxyLink( LinkProxy, url);
 
-        private static string ProxyLink(string proxy, string url)
-            => (proxy.Length > 0) ? $"{proxy}?{WebUtility.UrlEncode(url)}" : url;
+        private static string ProxyLink(string proxy, Uri url)
+        {
+            if(proxy.Length > 0 && ShouldProxyUrl(url))
+            {
+                return $"{proxy}?{WebUtility.UrlEncode(url.AbsoluteUri)}";
+            }
+            return url.AbsoluteUri;
+        }
 
+        private static bool ShouldProxyUrl(Uri url)
+            => (url.Scheme == "http") || (url.Scheme == "https");
     }
 }
 
