@@ -14,3 +14,5 @@
 - Fixed: Articles that passed readability still had no content
 - Fixed: Consist rendering of site name/article title for Content, Link, RSS, or Raw modes
 - Feature: Always offer raw mode option
+- Fixed: Only show host for HTTP/HTTPS links
+- Fixed: Don't proxy non-HTTP/HTTPS links
